feat: add logging